--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PuppyNet</title>
-	
-	
-<link rel="stylesheet" crossorigin href="./index.css"><script type="module" crossorigin src="./index.js"></script></head>
+	<link rel="stylesheet" href="./styles.css">
+	<script src="./app.ts"></script>
+</head>
 <body>
 </body>
 </html>
